--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "script": {
-     "start": "node index.js"
-   }
+     "start": "node app.js"
+   },
   "dependencies": {
-    "express": "3.x"
+    "express": "4.x"
   }
 }
